modify backtest to add a comparison

--- a/scraper/predict_sale_above_list.ipynb
+++ b/scraper/predict_sale_above_list.ipynb
@@ -18,7 +18,8 @@
    ],
    "source": [
     "%load_ext sql\n",
-    "%sql mysql://root@localhost/rental_nerd\n",
+    "# %sql mysql://root@localhost/rental_nerd\n",
+    "%sql mysql://prod:nerd@52.2.153.189/rental_nerd\n",
     "\n",
     "# imports\n",
     "import pandas as pd\n",
