--- a/scraper/sql_query_helper-ALL.nbconvert.ipynb
+++ b/scraper/sql_query_helper-ALL.nbconvert.ipynb
@@ -167,8 +167,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1217 rows affected.\n",
-      "1217 rows affected.\n"
+      "1221 rows affected.\n",
+      "1221 rows affected.\n"
      ]
     }
    ],
@@ -195,11 +195,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "188554 rows affected.\n",
-      "7938 rows affected.\n",
-      "41737 rows affected.\n",
-      "Entries before filter:  238229\n",
-      "Entries after filter:  173930\n"
+      "188123 rows affected.\n",
+      "7793 rows affected.\n",
+      "41277 rows affected.\n",
+      "Entries before filter:  237193\n",
+      "Entries after filter:  173383\n"
      ]
     },
     {
@@ -306,89 +306,17 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>7498334</th>\n",
-       "      <td>16202 W Mohave St, Goodyear, AZ 85338</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PH</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4717</td>\n",
-       "      <td>2012-09-13</td>\n",
-       "      <td>2012-11-30</td>\n",
-       "      <td>78</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>7491241</th>\n",
        "      <td>12544 W Alegre Dr, Litchfield Park, AZ 85340</td>\n",
        "      <td>NaN</td>\n",
        "      <td>PH</td>\n",
        "      <td>2</td>\n",
        "      <td>5</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>5354</td>\n",
        "      <td>2014-05-07</td>\n",
        "      <td>2014-08-29</td>\n",
        "      <td>114</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7481107</th>\n",
-       "      <td>15542 W Supai Cir, Goodyear, AZ 85338</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PH</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5149</td>\n",
-       "      <td>2014-01-03</td>\n",
-       "      <td>2014-02-05</td>\n",
-       "      <td>33</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7477511</th>\n",
-       "      <td>9038 E Crystal Dr, Sun Lakes, AZ 85248</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PH</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5595</td>\n",
-       "      <td>2015-02-12</td>\n",
-       "      <td>2015-04-27</td>\n",
-       "      <td>74</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -408,7 +336,7 @@
        "      <td>PH</td>\n",
        "      <td>3</td>\n",
        "      <td>5</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>6296</td>\n",
        "      <td>None</td>\n",
        "      <td>2017-03-28</td>\n",
@@ -425,6 +353,78 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>436999</th>\n",
+       "      <td>12731 W Hollyhock Dr, Avondale, AZ 85392</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>PH</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>None</td>\n",
+       "      <td>485</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2001-04-30</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7453725</th>\n",
+       "      <td>10326 W Charter Oak Dr, Sun City, AZ 85351</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>PH</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>None</td>\n",
+       "      <td>6143</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2016-10-26</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1490639</th>\n",
+       "      <td>17168 W Saguaro Ln, Surprise, AZ 85388</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>PH</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>None</td>\n",
+       "      <td>6294</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2017-03-26</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "<p>5 rows × 156 columns</p>\n",
@@ -433,51 +433,51 @@
       "text/plain": [
        "                                                   address adult area_name  \\\n",
        "property_id                                                                  \n",
-       "7498334             16202 W Mohave St, Goodyear, AZ 85338    NaN        PH   \n",
        "7491241      12544 W Alegre Dr, Litchfield Park, AZ 85340    NaN        PH   \n",
-       "7481107             15542 W Supai Cir, Goodyear, AZ 85338    NaN        PH   \n",
-       "7477511            9038 E Crystal Dr, Sun Lakes, AZ 85248    NaN        PH   \n",
        "1041628          4590 E Hazeltine Way, Chandler, AZ 85249    NaN        PH   \n",
+       "436999           12731 W Hollyhock Dr, Avondale, AZ 85392    NaN        PH   \n",
+       "7453725        10326 W Charter Oak Dr, Sun City, AZ 85351    NaN        PH   \n",
+       "1490639            17168 W Saguaro Ln, Surprise, AZ 85388    NaN        PH   \n",
        "\n",
        "            bathrooms bedrooms construction  date_closed date_listed  \\\n",
        "property_id                                                            \n",
-       "7498334             3        5          NaN         4717  2012-09-13   \n",
-       "7491241             2        5          NaN         5354  2014-05-07   \n",
-       "7481107             2        3          NaN         5149  2014-01-03   \n",
-       "7477511             2        2          NaN         5595  2015-02-12   \n",
-       "1041628             3        5          NaN         6296        None   \n",
+       "7491241             2        5         None         5354  2014-05-07   \n",
+       "1041628             3        5         None         6296        None   \n",
+       "436999              3        4         None          485        None   \n",
+       "7453725             2        2         None         6143        None   \n",
+       "1490639             2        3         None         6294        None   \n",
        "\n",
        "            date_transacted_latest days_on_market      ...      zipcode_85379  \\\n",
        "property_id                                            ...                      \n",
-       "7498334                 2012-11-30             78      ...                  0   \n",
        "7491241                 2014-08-29            114      ...                  0   \n",
-       "7481107                 2014-02-05             33      ...                  0   \n",
-       "7477511                 2015-04-27             74      ...                  0   \n",
        "1041628                 2017-03-28            NaN      ...                  0   \n",
+       "436999                  2001-04-30            NaN      ...                  0   \n",
+       "7453725                 2016-10-26            NaN      ...                  0   \n",
+       "1490639                 2017-03-26            NaN      ...                  0   \n",
        "\n",
        "            zipcode_85381 zipcode_85382 zipcode_85383 zipcode_85387  \\\n",
        "property_id                                                           \n",
-       "7498334                 0             0             0             0   \n",
        "7491241                 0             0             0             0   \n",
-       "7481107                 0             0             0             0   \n",
-       "7477511                 0             0             0             0   \n",
        "1041628                 0             0             0             0   \n",
+       "436999                  0             0             0             0   \n",
+       "7453725                 0             0             0             0   \n",
+       "1490639                 0             0             0             0   \n",
        "\n",
        "            zipcode_85388 zipcode_85390 zipcode_85392 zipcode_85395  \\\n",
        "property_id                                                           \n",
-       "7498334                 0             0             0             0   \n",
        "7491241                 0             0             0             0   \n",
-       "7481107                 0             0             0             0   \n",
-       "7477511                 0             0             0             0   \n",
        "1041628                 0             0             0             0   \n",
+       "436999                  0             0             1             0   \n",
+       "7453725                 0             0             0             0   \n",
+       "1490639                 1             0             0             0   \n",
        "\n",
        "            zipcode_85396  \n",
        "property_id                \n",
-       "7498334                 0  \n",
        "7491241                 0  \n",
-       "7481107                 0  \n",
-       "7477511                 0  \n",
        "1041628                 0  \n",
+       "436999                  0  \n",
+       "7453725                 0  \n",
+       "1490639                 0  \n",
        "\n",
        "[5 rows x 156 columns]"
       ]
@@ -501,7 +501,7 @@
     {
      "data": {
       "text/plain": [
-       "6745"
+       "6606"
       ]
      },
      "execution_count": 6,
